--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,28 @@
 <!doctype html>
 <html>
-	<head>
-		<title>Página Lorem ipsum</title>
-		<meta charset="utf-8"/>
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
-	</head>
-	<body>
-		<div class="container-fluid">
-            <div class='row'>
-                <div class='col-md-12'>
-                	<h1>Lorem ipsum</h1>
-                	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus egestas erat non mauris aliquam ultrices. Maecenas sit amet lacus maximus, faucibus nisi a, iaculis mi. Praesent dapibus, nisl eu placerat gravida, est nisi efficitur mauris, a feugiat justo magna a ligula.</p>
-                </div>
-            </div>  
-        </div>    
-	</body>
+
+<head>
+	<title>Página Lorem ipsum</title>
+	<meta charset="utf-8" />
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+	<div class="container-fluid">
+		<div class='row'>
+			<div class='col-md-12'>
+				<form action="/" method="post" enctype="multipart/form-data">
+					<input type="file" name="filetoupload"><br>
+					<input type="submit">
+				</form>
+
+				<h1>Lorem ipsum</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus egestas erat non mauris aliquam ultrices.
+					Maecenas sit amet lacus maximus, faucibus nisi a, iaculis mi. Praesent dapibus, nisl eu placerat gravida, est nisi
+					efficitur mauris, a feugiat justo magna a ligula.</p>
+			</div>
+		</div>
+	</div>
+</body>
+
 </html>
