--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 	<div class="container-fluid">
 		<div class='row'>
 			<div class='col-md-12'>
-				<form action="/" method="post" enctype="multipart/form-data">
+				<form action="/upload" method="post" enctype="multipart/form-data">
 					<input type="file" name="filetoupload"><br>
 					<input type="submit">
 				</form>
